--- a/src/App.css
+++ b/src/App.css
@@ -167,6 +167,9 @@ header {
   max-width: 400px;
 
 }
+.display-expenses-wrapper:not(:last-child) {
+  margin-right: 15px;
+}
 .display-expenses-wrapper {
   display: flex;
   justify-content: space-between;
@@ -409,7 +412,7 @@ label {
     order: 1;
   }
   .transactionPage-divider{
-    max-width: 330px;
+    width: 100%;
     order: -1;
   }
 
@@ -440,7 +443,8 @@ label {
 
   /* TransactionList */
   .noExpenses-img{
-    max-width: 200px;
+    max-width: 280px;
+    margin-bottom: 30px;
   }
   .change-order h3 {
     margin: 0px 0px 5px 0px;
